crates/hird-check/tests/snapshots/tools__tool_effect_wrong_arity_is_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"effect Tool<t>\\n\\\n         type Path = Path(String)\\n\\\n         type RepoState = RepoState(String)\\n\\\n         tool ReadRepo : { path: Path } -> RepoState\\n\\\n         fn plan(p: Path) -> RepoState ! {Tool<ReadRepo, Path>} = read_repo({ path: p })\")"
---
Path : String → Path
RepoState : String → RepoState
read_repo : { path: Path } → RepoState ! {Tool<ReadRepo>}
record ReadRepoInvocation : { args: { path: Path }, caller: CallerId, result: RepoState, timestamp: Timestamp, tool: String }
error[C0028] 152..172: effect `Tool` expects 1 type argument(s), but 2 were given
