crates/hird-check/tests/snapshots/tools__tool_function_result_is_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"tool Make : { seed: Int } -> (Int -> Int)\")"
---
error[C0032] 5..9: tool `Make` result are not wire-representable: function type `Int → Int` cannot be serialised
