crates/hird-check/tests/snapshots/tools__tool_name_collisions_are_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"type Fetch = MkFetch(Int)\\n\\\n         tool Fetch : { x: Int } -> Int\\n\\\n         fn fetch(x: Int) -> Int = x\")"
---
MkFetch : Int → Fetch
fetch : Int → Int
record FetchInvocation : { args: { x: Int }, caller: CallerId, result: Int, timestamp: Timestamp, tool: String }
error[C0018] 31..36: duplicate type `Fetch`
error[C0017] 60..65: duplicate definition of `fetch`
