crates/hird-check/tests/snapshots/tools__unknown_effect_in_tool_row_is_rejected.snap
---
source: crates/hird-check/tests/tools.rs
expression: "check_str(\"effect Tool<t>\\n\\\n         tool Risky : { input: String } -> String ! {Nope}\")"
---
error[C0027] 59..63: unknown effect `Nope`
